--- a/vj4/ui/templates/partials/nav.html
+++ b/vj4/ui/templates/partials/nav.html
@@ -82,6 +82,15 @@
               <span class="icon icon-web"></span> {{ _('My Domains') }}
             </a>
           </li>
+            {% if handler.has_perm(vj4.model.builtin.PERM_EDIT_REGISTERED_USER) %}
+                <li class="menu__seperator"></li>
+                <li class="menu__item">
+                    <a href="{{ reverse_url('user_register_private') }}" class="menu__link">
+                      <span class="icon icon-account--circle"></span> {{ _('Register') }}
+                    </a>
+                </li>
+            {% endif %}
+
           <li class="menu__seperator"></li>
           <li class="menu__item">
             <a href="{{ reverse_url('user_logout') }}" class="menu__link" name="nav_logout">
