--- a/vj4/ui/templates/partials/footer.html
+++ b/vj4/ui/templates/partials/footer.html
@@ -47,8 +47,8 @@
     <div class="footer__extra-link clearfix">
       <div class="footer__extra-left">
         <ol class="clearfix">
-          <li class="footer__extra-link-item"><a href="//vijos.github.io/about-vijos/about/about-vijos/">{{ _('About') }}</a></li>
-          <li class="footer__extra-link-item"><a href="//vijos.github.io/about-vijos/about/contact-us/">{{ _('Contact Us') }}</a></li>
+          <li class="footer__extra-link-item"><a href="//puxpu.com/page/aboutus">{{ _('About') }}</a></li>
+          <li class="footer__extra-link-item"><a href="//puxpu.com/page/contacts">{{ _('Contact Us') }}</a></li>
           <li class="footer__extra-link-item" data-dropdown-target="#menu-footer-lang">
             <span><span class="icon icon-global"></span> Language <span class="icon icon-expand_less"></span></span>
             <ol class="dropdown-target menu" id="menu-footer-lang">
