--- a/vj4/ui/templates/partials/footer.html
+++ b/vj4/ui/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="row"><div class="columns">
-  {% if 1 == 0 %}
+  {% if default(0) %}
     <div class="row footer__links">
       <div class="medium-3 large-2 columns footer__category expandable">
         <h1>
