--- a/vj4/ui/templates/partials/nav.html
+++ b/vj4/ui/templates/partials/nav.html
@@ -6,7 +6,7 @@
 </li>
 {% endmacro %}
 
-<nav class="nav slideout-menu" id="menu">
+<nav class="nav slideout-menu showlogo" id="menu">
   <div class="row"><div class="columns clearfix">
     <ol class="nav__list nav__list--main clearfix">
     {% if domain_id == vj4.model.builtin.DOMAIN_ID_SYSTEM %}
